--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,12 @@
 # Byte-compiled / optimized / DLL files
+.idea/
+# Python bytecode cache
 __pycache__/
+*.pyc
+*.pyo
+*.pyd
 Condition/__pycache__/
-Log/*
+Log/
+
+venv/
+.venv/
