--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,4 @@ venv/
 /Scripts/Upgrade_Downgrade.script
 Archive/complaince_test.py
 Archive/compliance_matrix_test2.py
-DTC/dtc_report.xlsx
+/DTC/dtc_report.xlsx
