jenkins is updated

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,5 @@ Archive/complaince_test.py
 Archive/compliance_matrix_test2.py
 /DTC/dtc_report.xlsx
 /Flashing/*
-Jenkinsfile_adv
 UPP_uds.py
+test.py
